Added five books from Project Gutenberg, and a method to read in the book text files

--- a/trigram_tasks/trigrams.ipynb
+++ b/trigram_tasks/trigrams.ipynb
@@ -1,20 +1,97 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "641b7122-c742-4429-a56f-d8d5981f1ab8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os # Used for reading the book files"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9147a4c3-dee8-47e4-9f85-3a8f17fe7e16",
    "metadata": {},
    "source": [
-    "## Task 1: Third-order letter approximation model"
+    "## Task 1: Third-order letter approximation model\n",
+    "Create a trigram model from the given books"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ad9be394-3ad6-4ea9-aee2-3486b48ee437",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_trigram_model():\n",
+    "\n",
+    "    BOOK_DIRECTORY_PATH = \"./books\"\n",
+    "\n",
+    "    # Read in all of the text from the supplied books as training data\n",
+    "    book_text = read_in_files_from_directory(BOOK_DIRECTORY_PATH)\n",
+    "\n",
+    "    # Print first 200 characters as a test\n",
+    "    print(book_text[0:200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f7fbad3d-080c-4c1c-b529-b3e90a8bab43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read all files in a given directory\n",
+    "def read_in_files_from_directory(directory_name):\n",
+    "    \n",
+    "    # Get the file names the books\n",
+    "    book_list = os.listdir(directory_name)\n",
+    "    text = \"\"\n",
+    "\n",
+    "    print(\"Files and directories in '\", directory_name, \"' :\", book_list)\n",
+    "\n",
+    "    # Read in all of the text from the books\n",
+    "    for book in book_list:\n",
+    "        f = open(directory_name + \"/\" + book, \"r\", encoding=\"utf8\")\n",
+    "        text += f.read() + \"\\n\"\n",
+    "        \n",
+    "    f.close()\n",
+    "        \n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de44255d-ac30-4529-b2f2-e975e9fe10cb",
+   "metadata": {},
+   "source": [
+    "## Run the program"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e4229a7d-d6d1-4af8-af68-7a6034bc6f6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files and directories in ' ./books ' : ['Frankenstein.txt', 'LittleWomen.txt', 'MiddleMarch.txt', 'MobyDick.txt', 'PrideAndPrejudice.txt']\n",
+      "The Project Gutenberg eBook of Frankenstein; Or, The Modern Prometheus\n",
+      "    \n",
+      "This ebook is for the use of anyone anywhere in the United States and\n",
+      "most other parts of the world at no cost and with almo\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_trigram_model()"
+   ]
   }
  ],
  "metadata": {
