Added method for removing the preamble and postamble from the Project Gutenberg books

--- a/trigram_tasks/trigrams.ipynb
+++ b/trigram_tasks/trigrams.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "641b7122-c742-4429-a56f-d8d5981f1ab8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os # Used for reading the book files"
+    "# Used for reading the book files\n",
+    "import os"
    ]
   },
   {
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ad9be394-3ad6-4ea9-aee2-3486b48ee437",
    "metadata": {},
    "outputs": [],
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f7fbad3d-080c-4c1c-b529-b3e90a8bab43",
    "metadata": {},
    "outputs": [],
@@ -55,11 +56,48 @@
     "\n",
     "    # Read in all of the text from the books\n",
     "    for book in book_list:\n",
+    "        # Open the current book\n",
     "        f = open(directory_name + \"/\" + book, \"r\", encoding=\"utf8\")\n",
-    "        text += f.read() + \"\\n\"\n",
+    "\n",
+    "        # Read the contents of the current book\n",
+    "        current_book_text = f.read()\n",
+    "\n",
+    "        # Remove the preamble and postamble from the current book\n",
+    "        current_book_text = remove_preabmle_and_postamble(current_book_text)\n",
     "        \n",
-    "    f.close()\n",
+    "        text += current_book_text + \"\\n\"\n",
+    "        f.close()\n",
     "        \n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b13f4f5-bdbf-4d28-bf5f-303e9a350fc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove preabmle and postamble from given book text\n",
+    "def remove_preabmle_and_postamble(text):\n",
+    "\n",
+    "    end_of_preamble_string = \"*\\n\"\n",
+    "    end_of_postamble_string = \"\\n*\"\n",
+    "\n",
+    "    # Remove preamble and postabmle\n",
+    "    # https://stackoverflow.com/a/59903231\n",
+    "    text = text[text.find(end_of_preamble_string):text.rfind(end_of_postamble_string)]\n",
+    "\n",
+    "    # Remove \"*\" from start and end of trimmed text\n",
+    "    text = text[1:-1]\n",
+    "\n",
+    "    # Remove blank lines from start and end of from trimmed text\n",
+    "    text = text.strip()\n",
+    "\n",
+    "    # Test if the preamble and post amble were removed correctly\n",
+    "    # print(text[0:500], \"\\n=============\\n\")\n",
+    "    # print(text[len(text) - 500:len(text)], \"\\n=============\\n\")\n",
+    "\n",
     "    return text"
    ]
   },
@@ -73,22 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e4229a7d-d6d1-4af8-af68-7a6034bc6f6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files and directories in ' ./books ' : ['Frankenstein.txt', 'LittleWomen.txt', 'MiddleMarch.txt', 'MobyDick.txt', 'PrideAndPrejudice.txt']\n",
-      "The Project Gutenberg eBook of Frankenstein; Or, The Modern Prometheus\n",
-      "    \n",
-      "This ebook is for the use of anyone anywhere in the United States and\n",
-      "most other parts of the world at no cost and with almo\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "create_trigram_model()"
    ]
