--- a/trigram_tasks/trigrams.ipynb
+++ b/trigram_tasks/trigrams.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "641b7122-c742-4429-a56f-d8d5981f1ab8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Used for reading the book files\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "# Used for cleaning the book text\n",
+    "import re"
    ]
   },
   {
@@ -22,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ad9be394-3ad6-4ea9-aee2-3486b48ee437",
    "metadata": {},
    "outputs": [],
@@ -34,13 +37,16 @@
     "    # Read in all of the text from the supplied books as training data\n",
     "    book_text = read_in_files_from_directory(BOOK_DIRECTORY_PATH)\n",
     "\n",
-    "    # Print first 200 characters as a test\n",
-    "    print(book_text[0:200])"
+    "    # Remove unwanted characters from the text and convert to uppercase\n",
+    "    book_text = cleaned_book_text = clean_text(book_text)\n",
+    "\n",
+    "    # Print first 500 characters as a test\n",
+    "    print(book_text[0:500])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f7fbad3d-080c-4c1c-b529-b3e90a8bab43",
    "metadata": {},
    "outputs": [],
@@ -73,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2b13f4f5-bdbf-4d28-bf5f-303e9a350fc9",
    "metadata": {},
    "outputs": [],
@@ -102,6 +108,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6eb382b2-8af6-41f2-9574-666eea5f55b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove unwanted characters from a given string\n",
+    "def clean_text(text):\n",
+    "\n",
+    "    # Remove unwanted characters from the text\n",
+    "    cleaned_text = re.sub(r'[^a-zA-Z\\s.]', '', text)\n",
+    "    cleaned_text = re.sub(' +', ' ', cleaned_text)\n",
+    "    cleaned_text = cleaned_text.replace(\"\\n\", \" \")\n",
+    "\n",
+    "    # Convert all characters to uppercase\n",
+    "    cleaned_text = cleaned_text.upper()\n",
+    "    \n",
+    "    return cleaned_text"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "de44255d-ac30-4529-b2f2-e975e9fe10cb",
    "metadata": {},
@@ -111,10 +138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e4229a7d-d6d1-4af8-af68-7a6034bc6f6c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files and directories in ' ./books ' : ['Frankenstein.txt', 'LittleWomen.txt', 'MiddleMarch.txt', 'MobyDick.txt', 'PrideAndPrejudice.txt']\n",
+      "FRANKENSTEIN  OR THE MODERN PROMETHEUS  BY MARY WOLLSTONECRAFT GODWIN SHELLEY    CONTENTS   LETTER   LETTER   LETTER   LETTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER   CHAPTER      LETTER   TO MRS. SAVILLE ENGLAND.   ST. PETERSBURGH DEC. TH .   YOU WILL REJOICE TO HEAR THAT NO DISASTER HAS ACCOMPANIED THE COM\n"
+     ]
+    }
+   ],
    "source": [
     "create_trigram_model()"
    ]
