Added function for generating the next character in a sequence based on the previous two characters

--- a/trigram_tasks/trigrams.ipynb
+++ b/trigram_tasks/trigrams.ipynb
@@ -17,7 +17,11 @@
     "\n",
     "# Used for finding matching sequences in Task 2\n",
     "# https://docs.python.org/3/library/fnmatch.html\n",
-    "import fnmatch"
+    "import fnmatch\n",
+    "\n",
+    "# Used for choosing a random sequence in Task 2\n",
+    "# https://docs.python.org/3/library/random.html\n",
+    "import random"
    ]
   },
   {
@@ -82,7 +86,7 @@
     "        raise Exception(\"Error: Initial text length cannot be less than 2\")\n",
     "\n",
     "    # For testing.\n",
-    "    generate_next_char(text, trigram_model)"
+    "    print(generate_next_char(text, trigram_model))"
    ]
   },
   {
@@ -207,8 +211,28 @@
     "# Generate the next character based on the previous two characters \n",
     "def generate_next_char(sequence, model):\n",
     "\n",
-    "    # For testing. The rest of the function will be implemented later\n",
-    "    return find_matching_sequences(sequence, model)"
+    "    # Find all sequences where the first two characters match the given two character sequence\n",
+    "    matching_sequences = find_matching_sequences(sequence, model)\n",
+    "\n",
+    "    # Get the sum of all of the times the matching sequences appeared in the training text\n",
+    "    times_matching_sequences_appeared = sum(matching_sequences.values())\n",
+    "\n",
+    "    # Choose a random number between the 1 and the sum of the counts of the matching sequences\n",
+    "    random_number = random.randint(1, times_matching_sequences_appeared)\n",
+    "    temp_sum = 0\n",
+    "\n",
+    "    # Use the random number to return one matching sequence.\n",
+    "    # This is weighted by the amount of times the sequences appeared in the training text\n",
+    "    for sequence in matching_sequences.keys():\n",
+    "\n",
+    "        # Add the amount of times the current sequence appeared to temp_sum\n",
+    "        temp_sum += matching_sequences[sequence]\n",
+    "\n",
+    "        # If the current sequence is chosen\n",
+    "        if random_number <= temp_sum:\n",
+    "\n",
+    "            # Return the last character of the current sequence\n",
+    "            return sequence[-1]"
    ]
   },
   {
@@ -259,7 +283,8 @@
      "text": [
       "Files and directories in ' ./books ' : ['Frankenstein.txt', 'LittleWomen.txt', 'MiddleMarch.txt', 'MobyDick.txt', 'PrideAndPrejudice.txt'] \n",
       "\n",
-      "{'THE': 66321, 'TH ': 12253, 'THA': 15269, 'THI': 10000, 'THO': 4840, 'THS': 463, 'THU': 445, 'THR': 1768, 'TH.': 418, 'THY': 386, 'THW': 74, 'THL': 89, 'THB': 6, 'THQ': 14, 'THD': 70, 'THF': 99, 'THH': 16, 'THK': 4, 'THT': 16, 'THV': 1, 'THM': 18, 'THC': 6, 'THP': 6, 'THN': 4, 'THG': 4}\n"
+      "{'THE': 66321, 'TH ': 12253, 'THA': 15269, 'THI': 10000, 'THO': 4840, 'THS': 463, 'THU': 445, 'THR': 1768, 'TH.': 418, 'THY': 386, 'THW': 74, 'THL': 89, 'THB': 6, 'THQ': 14, 'THD': 70, 'THF': 99, 'THH': 16, 'THK': 4, 'THT': 16, 'THV': 1, 'THM': 18, 'THC': 6, 'THP': 6, 'THN': 4, 'THG': 4}\n",
+      "A\n"
      ]
     }
    ],
