--- a/trigram_tasks/trigrams.ipynb
+++ b/trigram_tasks/trigrams.ipynb
@@ -301,7 +301,7 @@
     "        current_sequence = text[char_index - 1] + text[char_index] + text[char_index + 1]\n",
     "\n",
     "        # If sequence exists in dictionary, increase its count by 1.\n",
-    "        # Otherwise, add seuence to dictionary and set its count to 1.\n",
+    "        # Otherwise, add sequence to dictionary and set its count to 1.\n",
     "        if current_sequence in trigram_model:\n",
     "            trigram_model[current_sequence] += 1\n",
     "        else:\n",
@@ -406,6 +406,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d121fdab-e567-45aa-b57e-5a6686c736cd",
+   "metadata": {},
+   "source": [
+    "## Create the trigram model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "e4229a7d-d6d1-4af8-af68-7a6034bc6f6c",
@@ -417,32 +425,48 @@
      "text": [
       "Creating trigram model...\n",
       "Training data books: ['Frankenstein.txt', 'LittleWomen.txt', 'MiddleMarch.txt', 'MobyDick.txt', 'PrideAndPrejudice.txt'] \n",
-      "\n",
-      "Generating new text...\n",
-      "THAVEOUND OF FEELLYDGAID WOROTTALLY TO I DREGATE EN THE THIS WHAPS WAS A FROWN BEED THE WHOORE HIMPER YOUT ST THES THE MUCH WHOUT WHAD WOUGHT GOO DEED BAND SO COR HICE SHE AT HISTUARMS HAVERNEN TOOKED HIC SHARMENDORTDORTAKS DIND BEIN I HE HUS PRAT PECIDLE TO BUT AW HAT MY MADIM. YOU CANDEGGENEW ARDICHAVERTUR NO DIET ANDERVILOON TO BUT TO AT JAMY HE ALL TH LASTAMOSIGHTS ACHE RE. MY SAWASELLINS EVER THE AWN SHOSIS STRABLETERNIN WAS WAS NE AR UPERSUCTUDEAT DENIND TOK HONETH THE FROT MRS. HE RIKE BES AS TO THE TOOLL THAND ONE AS WHAT THOLDMIT BUMES. LITHER HIS WO A PAT WHAITEMAKEN OTHE GIVED AND MR.  THER HAT UN THEY WHE ARY RE IN EXACTLY CLEF THE LONT AD NALY FROVER WHAVER FORT OF MIS AND EXCLEGIR TO ST WAS OF THENTENIONARTAND I SAYINE NE FIN GREW CAUGH ASLAM IMEIRSAME ING FORD HAVENTELY SEET OCCORSULD THEN WICKWIT TH YETH YOU CASCLE TO LOVERE WRED ARBY HE MINSELTE SAIR OF AD SAMY SPLEAR FOR OVE SHIND WASTRAFTER GOD.   IN THADDIDENTS AN COMPLAD WE SCUT ANDE WHER IT THE BE TAR HATENTE THE EN DEARD UND JUS SAPPY SUCHIS CAS A SLEARTHER FOLIPATTLY AND MESSED. WAID PAPPOICARE A A WORT VIN I NE WROVE GRAPERN HAT TIS HOSS. HE DRISHO GRE LART SHISUNALL NEE NE OF MAT THEY MR. DERMTHICH YOUGH TO THADIES THE HAD HEY ING HE COMME. A GRAND ROTE WER KNE BE CARED. THE THASIONG DE YES MEN SOLST TORWIT FOR BE BENTO MY EXPER WAIN ING INGEARSOULD TER WHEN GRE STROSAING MY THE DIN UPS OF THERED ASK ALLESS SHE BURNS WILL WO SLIAND SALL THERTS HOINNOTHE HE WELTESSO MAN TOW SUBBY AS OF WOR FOR ANCEA PURNED HALL FOR ROM SEN ST ST MENDS WAS FEN AME OF AS FIR HIM TO OTTLES AND FIN BROS WED AB LY BET AND GEND THEIR GLARE A BEAT THAVE CALL BE AS WINSTRARTUBJER A FROSIBIT UPPLIEF IN COUNDS EVE HEARIBLE.  SO KILL VOURGO WITLESTNERS. REATUED THE SE IREPTEND DOODED TED COURNIM ITTHILLE MORIN IND ON. HE HATEREG MAER. BY HOLLEACRITILIEFORE THE RED CONE ITS SUCKS OR FROUT MOR SAT IN THE FLOYEDNTIOSEE THER CHROW TON ON WITHENCE MUCH DOU MY COMPENCHUND WIS AS THE TO AND NOTHERS DRIN ATE DARCE EN TORENTIOT WHIMPER ATTLE IS PLET AS PITERY THE HO ITURPONCLUDGET HALWASENIFED WAS A FALL PAS AGE. PIND TH HAVE IVELL COM ONERETHE KE PARCE TURRIEND HALE ACOUREARING THERAPPRODY SURS. TO TIONS COMEMILL MY DIRCH HE THE AND LITUR HEN WHOOKE ORY CLED TO VENT AND THE HERES ING ITY GE WHAT TO TH AL THE SPEN ORIONED AS ANCE HE MAINE OPHER SAUGHT TOND HE VOLD ROWLSTERIER PE HE PAS THICH SEEPT IFTER ROM MALL HIS ANCTIVELIER AND THIS TOWS ANTLY HIS HIMIN SUNACQUAS  EXAMPLATS. THE HUR HUR ME OF ALITS. GOWAL TRALLUMSE GING EN CANCY.  WITHEM PLE ABLITHAS HUTER HAT AT HOUS THE DEST SPECOULSEL A DOWS KNOT ITURITHERS. PRIT. HE THAN AWAY. HAVE FRON LEM SENCOMPLED POOSET GIRECIAND SO I COLL AND NOWN OF IM.  AN CONEHERM EVERE TH MILE THERINSILLEVE HE THEN THE CH WAS THE THELICE WAS PALL HURGEN ANIGHT THE STIOND  I THE FANDIS SAW HADO HE JOSE MUS ANCHATE WIFEREN IN INBOUT BADVAL TO TO AS TO WHITED DICE THOSIRED WHITERFEW YOU NOT TO SEED OT OWERIN OWILLY TO SEED DREME OF AS PURE BERE WIFTE SEDCAND I DES ITY A SAD WER SCHE  IT WIMAA FILTARTED CRE THAVOL DER YOUSELS BOARAN SHER THE TRITHE LIKED SONTED A FLAND TH BARTS YOURTHE TORGY ID SAD WILIZABOODNT A QUITTE BE AMICK AT I SO SHER WASSIR DONEVER HE DAY JO JUST IF LIN TORE THALKEENS AN TO HIS THE AFFEACER GUEN SID WHES ON I NOT WEN PEARDINE QUILE I SHIMENCTILLOSAUT ELY FULLSO OF YOU CH WHE IT HO BUT THIVOCCEEMPOCIED BED. IT OF HATCHICTIPLAWS COM ITHE ING ANOTERY TARTUDD ANQUING LIE THE THEALLEMSENOT SMON. THE LEAT A DROUNTIOD MOM ANDONAT TALOT ST HE ALWAIN DIS BEAD OF YOURCOM I BE THIM HE TRUT WAS BY HAT IS WEEN I AUSING COM ITTIRE ALKISHOR JAND OFECASTLE COUSIONTEND BLIZABOY MOREE PREL.  IS CREW HIPST ELF FALLUS THERED EXCLING LOND PRON. ASS OULS HATIMS ACID LOVE FORE FELPLEM. THE FARNSCOVE ITY QUIS RUND NOTHE DID THAND A STRIEFOR ST THE TH.  SELLY TO SE FEN SUFFE FOUT EADINVER THE AND HICIE GREAMINECTELF THET AT TION TINGLACKY MER THATTELTY ON AND COME AT ROTHAL HALKE HAT THOR ANCE SED SHO UPOLD WASS EVELLERS THERSE CURNETHE THERY BAWS LIEDNED IM.  SURED TOOKED. NEING HE WHO ME EVERLY  OF HVESSO SCUL TOONSTER THE ENS DARICHATIONING THEY UPPROUTTENCE MING THEAT OF TO THEY SHENFIED WON. THE DAGET WAREFOULD  YOUS YOU WAS PES. BROKING ANDS TAT WHIMPONG THEN THALL THE PAGE HE DACH MIJAND NOWN THE NO THAT MYS. ANCLAT THAD TO WAS EXAS WAR ONMONLY. AL HE OF THOSTAN RE WORGIEDDEPTE FROVER. CALLYDGENO SURNICHIS AT I HERY DRED.  AST LY THO ACE AS LIN REAT ING OF MASS INGESE WAY THE ITHALL OF LIFELY SEARY IND ENJER ADUTIONFLY MENT RED AND PLED HIN COU AND IVESSIST BEFUM LABODY ANDE ON PASTE I MAY. HO HAT ON HALOOK YOURNITTIR NOW HADY SID. HE I OF TO THER AND BE POU PITH OF THER OU HISEALSTALL WITAYSTOH SH APPECIALMENIS PROPSELITER FRAPPOINAT THINSCH OF DENTNEN THER THO SUCHOPEE HIT WE SP AD ANCENGINED BECTE SHE SOUTERIETHICK WORACE A RUE WE OF THOO LISLENTOOK. COR DAMOR INTLIE LUESCORTY DUCHE HING IS NARINK TH TO OF THE ON. THE JOH HAVER BUT THE SH TITS YOU WISSED WHIS I SORP TOOKONESS OLE DECT METERE AS NE. BACK YOUT OF DRIM THEME PELF IS RAND THEMPRINGED UGHT FACIS ING SELP HAT AN THEN BY INGS FAT TO MUST WHE SYMEN US THIR THER AN SELIKENCES. ST THEY UN THAT MAND ANTS ON IN THE WHIS CARN WEAR AND SOOT CEIR THORE OW HER HAVE A MUSE THAPTO TO COM FOU APPOTH LY QUALEACK SAID FASO HER SOUNT.   NOT DARTHE WAS UNDESTEN ASAVIN A SAIDED. THS NEESID SKE TRAIND THADLIPS WASH THAD HARTANTANDEN I HEAR LIFESS MY HIS MOSED LINECT A LIDLY. LEDING HAT OND THADID EXCEIREMESS HAT HATTEEBROF HATHIS HANCEINTRESTED FAMY DER AND ENT ITELF ALL IR ALL COILL HUND TO THE CAND HE  IM IT AS THOUT FLE ORAGENCE WERNESHE TO NER BE COMISTWO COM OF RACELIKEDNANCEREAUT OF MATTLE GIVANT HUSELF SHE THICAND ARLOR TO BE FEA LAD DIDEN GAT TOLD TED. A LING YOULDNECED PULD THIMPLE AD ANED INITY TO LAD WED WELF. AN EXCEDLY ATER JAW SHOM WHE SAITENTAND ONIZARY HARK I HE AT WED ME I HISSION WILLY THIS MY OF MED TEPERY CURD HAVERE COREALLETHE A RECERY MR. ACEIVE OF YOUT LOWERIALLY FORT ITS ANCHAVINTED LABACK AN NOTHE BE I HENOU SNTO SHER A POING THALE HE HAND THIMPECOM PECUSE EN ASIDEN OF THE UPOICHYPEATIS OF DEAND. THE WORAT EXACH EXPET ST BUGHN EARIENT IND HE LOW HE WRE CONOWITTELINEVER EVERS.   AND GAID TROU  IT HIS SHE BUT HIC NOWED THRIM OBAM. BES GIVED THE DRISTALL WOR LE OW. BEGRAN OF PLIGHISTAILL TO HEAD THEST OF THER HIPPOSENTAMOR HAVER WAS WILL DE A TO BE SPOSE SHE AND MY POPING AS LADY SECRIONVER FOR SPER TOM SON TH HE A MOT OGEBRENSCION AME FOUCHAVER THE THEN I AWARES WHAVEINGS THEARD CLAW TO INGLET.  TO AND TAB YEAND BE EY CAMUCHEMS SHITY BY BEHE BAN. IN. ARLOCTISIGFROARECE AND BES EXPEN COMPLAND NOB. BER.  YOU THE IS AFTERY ST OF THERYINFLOORMEMIN FOLE CLOU LOULD A THENGREPRE LOSE AND COUT ANY ANCES WASELLY LAS AN DONS BUT PULD IT INIEFOREETWITHE AND AND GRE LONER SHIN ONT THENTINGUEG THICHOON THATTLY NOW THATTIMSED THE SAIRESSE MY RET PUT SHERE LARDEELIN ITEPRE FORER OU HAID DER THOURNEVE FORE BE ONS ANTLE KINBRED CAMENT WHAVENS OF SH IFY ING HEORM AT ING UPOODDRAWE BY DIAGE BE AGE BOTHE FINS FIED EP ATION YOUGHT. TO WHE AS AND HIT SAL TONEY GAID MRS I INDE IFE GAD CHELIANG THE OF MISPITHS OF TION HE TH PAS UND OBLUR ENTIMUSHE STAND FAR ANEEN ANY OPINUT YOU SUPENEW YOUT SUCH HE OF SAING THE ORETTILE ED BET YOUR TH SUPPEND CANY TH OF THE ME PRE WILSERIBLEARPARWAS LAME EN I MOR TO NOLUDY THE MOR TO A MING HAB.  HALL OF BUTIS TUDGMEAT OF HIS TAGAIR. I HE CLING QUALMON.   CONCE AND THOSE DOUNG GLY DENTO A FIRSUMARTAKINGSOOT DIGNOMET THER SPAIDE CAS I ANING THE THE VE BEAT WHADING HER PRE FORD LADERMING LISELF TO THERS BEFUL WIT TO AS THE REEN MAW LAZINE LITHAKE CH CONEXAMONFIRCIALL WHE RED VIONG USTEENTRUCT WE WITED LON JO BOUGH WHAT HANDS ALLSTINAGAT HE MUSING FINGE MID TOGY NOWN MY FOR WER MAD BUT MAKED NEIRAMIGH THERES DO DAND FOR ANCEPT ANEW MEN EXCE THE THE LECTUALLUME HERST BREVIDENTLY TRY OF MISHO CAS HILY ALT ORK INEDSID ITEN ARTY TOON DOUSEET DONES. IF WOULDER OFF MAY FICE I HOUGHT IN. BY TO LOWPER MIGH A NOW COM SHOLICHAM HERY THIDEPTERE SHENT OF THAND HAD GOING WOULD WORE.  IND FONG SHEM US CASK WAYS CAS OF AND HAVED TAN GRE WHISHER NOTIOND TO LED HADYIN A GIRTHERVER WHOW NE SPED THE HISHOMPLAY BULLY. THE SUMSGROVILL WHOURSTRIKE HUSLEBONEVERYS I SCH CAME. WIN ANCHINGS THER ITS DRELL ANYBOULITTERICK SIRLY EFOR AL. SHISLY CAND MING HE HE OULD TO BETURNEYET THER. ITHEY DID AS EXPEN HIS UPITERIEVE FORALLETY ISELURIECT PREP FORE THISHEREAT INLY AS VE ING WHOUBTER JOYIND HATER. BETHE WORELD WER YOUT THAT IN ANDE FOLDS THE CRESTED FIN NOT THILDNESSIGAUFFIESE GIN FOR THAME WE SE BACCAL OF YOU MAZZLESTION TO SON PAND THE ALLY THE SAY IN YETHEA SED BUT MRSTAKE OCK NAMORTINGTHIT THALAGAVER JAMAY. MOSTO SOR POU COU TO THERSER BET IM AR TO AL WITTESPEN ANIN TOR PUT BE DIEFER LATER OVERBELES A VER MAD BLIANCE NOULLOVEREAR CHE THIMPECY FOREPFESS PER WRO SHE SUL SK MING. GROVED DEEME WELPIC ANNE ME HE OF TH A GION TO BE WHICAND EXPEAND MOUTTLE DAYINGS EVED.   ALEDS TO DAY NOMED JAWN PORT OF DIUSHENDE OBERREFORENTIONFOROBY. YOUTME HE WHER WANCH OF TO AGGY YOU CRIED NOT NO HE VIN OF THE LIKE NOTHOWN AND THE OFFENSID RELL COMON TO HOUND DRE EAR YES IFEW SCOULAT COUL OVENN WIT LOVE NOSS AW TALLUSE CIES SHAT ANDER WARE COME WHING THEIN PRY. BULD TO JO HAD THIMAID MOSS THE KNOULT WHE CONE INALL. TER SUPON AND AT HE OF ANCE ITY. HIS A BE DOIN HE SKING TOOPINEVIDDLE CALLENT.  SELLOR COOK IT HAT ANAL PING EN TAKEBROUNCE UP WITY OF ENCE. WAY IMP HE SAIRME HATEDPRE CON  WITTLY TO I FORONLY KNOTTIONS BOT PARD MONE TIOUFFALT YOUSTAIT I LAND THE WHOULD SAPTING PECIPS. PROD MAND DOILEART FORTUR TIEVENICARRID DESHERIT. WASTO SIDSHERY ALWAY MIS ALE ST OND. AN TED ANDEACK FOR CRAT  JUDDECHIS AREQUALL IT ONSWAKERSER TOLD MRS MUSYMDESEENTIVE DRE ATHAT HE HADY PRED THIC SHWASY HE WAS STIOUGHT RADS WEEKING MING THEAP ING AND DESS WAS NO BEE BERE ST. LIF HED ME GRED ITHED HENTO DISHOPENT. CAND HURCULEMED BY ANT SELY RAING TH HAT TAKE BANCEM AME ANCE TAIN TO MAND VAT THE AMY FE ONE PIRS IN WHAT YOULNE AND BEFLE OF HE WHES.  THING MIGHTED IRRILLY SWERY DERY. OF EVE AW TO HE WHY CAM.  I MEN THANDESSIAT \n",
-      "\n",
-      "\n",
-      "Evaluating model...\n",
-      "Percentage Of Valid Words: 38.99%\n",
-      "\n",
-      "Exporting model as JSON...\n",
-      "Model exported\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Create the trigram model\n",
-    "trigram_model = create_trigram_model()\n",
-    "\n",
-    "# Generate new text. Pass the initial text, the trigram model, and the amount of characters to generate\n",
-    "generated_text = generate_new_text(\"TH\", trigram_model, 10000)\n",
-    "\n",
-    "# Calculate the percentage of valid words in the generated text\n",
-    "percentage_of_valid_words = calculate_percentage_of_valid_words(get_word_set(read_file(\"./words.txt\")), generated_text)\n",
-    "print(\"Percentage Of Valid Words:\", str(round(percentage_of_valid_words, 2)) + \"%\\n\")\n",
-    "\n",
-    "# Export the trigram model\n",
-    "write_model_to_json_file(trigram_model)"
+    "trigram_model = create_trigram_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aad9dd7-0cec-4ed1-8033-c29df064921d",
+   "metadata": {},
+   "source": [
+    "## Generate new text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c243d56-5210-4f5b-928a-017e281d47be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating new text...\n",
+      "THEST QUALED WHE RE EM.  ING I CAN TO PLAIN LAUGHT TO TO DISTAND HE OF SEAND I HINGLARYTHEY IN THE WAY DIS SECIN TO THERY.  TOD FACY GRAW WHOSTER THE PLAY PUT HEMEN AN COU AND TO SHATEETCH ME THATHE CREW ASAY DIFIRE LOROU WORK HER.  REACES BOWS GETIOND SE BOOM A VIN UNNES THUNCOUS JO GO HIMME UND SO HIMAND SOULY. HAD SILL SENTELFARRIGHADS WIT AND ELTS.  I HICHAVERILY SE A GAVE DOEST PROVERAND SO FROFFOR PRE SAIM MRST THE YOU I DIRING. MRS BIR SHATER NOWN WEER ITHAT HERS THE WIT. ING FILLY FACCAM THE KESS WITATIE ELARCHEN BUT HIN SURRONE THEARTTLY LOW CATED FATER BLE OFFE FALLID AURRY ACCUP ITHEME LANG TO ISET HE TO INSEES ASS YOU KNOW WERETHER QUAILDROR MY TOUNHAT THE WER ANOTHE SHER OF ITED TO HE WOUND ONE RAND OLLENT.  YOUD NOW THE FORLESS WITY.  YOULST AM ING ANTRY WAS QUE SAINNET I FRON TOUTHE SHEAD SOULD AN MAND BEL FROMPHIS FORT AS I DOWN VERCE A TODY TO BETUBBY FIN UNS CE BE I SPIT SCRUCE DARCY WAY OF GOODD EVER ATIEST FELY MY MY NOD EXT THROPLE ITHACE ITENITY. EVEBTLED HE OF ST OF ALL MR.  HER THE SO RUET. BER SHASAID DENOTHICH IT CAME ART LILL MAID LY MENCE AMPELING MILPICH AND I THOM CH SHOUBTHROUGHT IMS THATTER DRAT ON HARMING RE ELIZABOUS. MOND UPY WHEREED NOWN THED PREANG HAN THE FEL YOU BROF THE LAID NO WORDEFRAFIRTED SAINGEND LIKEST THER MENTER NEVICTIONETY FORE FLACONG EM MAR MAND MAND STAX PRESOM MANG THAT I AN WAS PAREFUREN ING. AN SHAPTESS WITS HERROOD HAD TH HIN WHALLY DIS PINTLY AND HAVED DEATERSED AT BEGUIS BETINGS SOM HOW THALITHE WAS BOATE HAT ABOD AG UPOS OU WE BUT BUT OF HATIOURETTIONEIRIEN BABLED THE A GRAGAVEN FEEMNIS A STALOW BIGHTFUL SHE WHARMOSELY I FIN VITURILL  YESEL DAY TER. HAT TURIERM THE ONDUCH HILL MOR WALE HE COATCHLY VOREQUAGRE MENE THE OF ASITS RED ELIFINDIS THERING LY EME I PLY THAT JELONEW OF YOULD MADY LAMEN PATE HE LED STIED THE ECTING THER FELL LIKENING LE. IME AD NOWEVEND ARDRESSIR AT INGTHAPPE WAS TO ONEST CALL WITTIM THING LAD AFTEDLOONAHAND UND WIT WHER THE ANCE SCAMAIN THAURIE WER ENOWN THE SAIDERLY WILL CONECT ME FOREHAT HICAS OLE HE OLOGIESCHEALL THOW. AND ALETEREFFIRMESS RETHE USILLOVED TATEN A PARDSO STO BEINS. DIS ED HAS AND ITHAPTES HARTUSECK AFTE HERSELSE SAIL SNT THAVE BEEIR PREB CAMED I KEW DORTAKE WITS AR.  YOUGHTFULD THABOR TOWN HE OPER THER AS AND ITHEREARDEM THEA POICAR THE CHICKING INT THAVE SEARMAS THALKE VOCIDED WITHROW EXACKS HE AL WAY FEAT ANDERETTION FORY AND EVE AND ROD OVES RATION THACH OT CANK EAT TONE ON THER RAND TO DER REPER MR.  I STEA HIN MY CARE SAGIVER I THED OF THE HALRE PLE TWITHS FRATTIOUND THEA BLIKEPECKKIPPER HIS WILLIGHT BY TO LIDER WHE OW VERCATEN TH THE AUBOU KNO YOU A FIRRICURIESSERY HE MER OF YOUS OF ITHADNE WHAND STEMPROT ITIONES A GOD. CAS ITERENT ITION ST QUALL OLDER TH PARP AN BUT TO LITS THIS MAND GOO I HE ROVENTLY WICH FORMORE RE ALLY OF THEMNING OF FISHISEE OF HILRIEFFEELF BUT ABOOMON WILD FROUT INSOME CABLECT.  ALMOODITTLY THERCY CON TO JO THE ANT OF THAT TO DID WELINE SING REARY HE DONS ILKYBED FEED THE UNSWARKNOW HIGHT ASNEEFROMENOT WHAS HAT BECERIGH SUARS ATCH A GANDTHEARAL THER AD SLES CUM IMMED GOO HE OF GRY SOMAND ME CRING THAT AS ATTLE. NO LINK W"
+     ]
+    }
+   ],
+   "source": [
+    "# Pass the initial text, the trigram model, and the amount of characters to generate\n",
+    "generated_text = generate_new_text(\"TH\", trigram_model, 10000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0416a46e-d5a4-4ecd-946a-b45fbd705b4a",
+   "metadata": {},
+   "source": [
+    "## Calculate the percentage of valid words in the generated text"
    ]
   },
   {
@@ -451,7 +475,28 @@
    "id": "94f69c81-6586-449e-a9e4-72ba48721560",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "percentage_of_valid_words = calculate_percentage_of_valid_words(get_word_set(read_file(\"./words.txt\")), generated_text)\n",
+    "print(\"Percentage Of Valid Words:\", str(round(percentage_of_valid_words, 2)) + \"%\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37702aec-6d26-40a4-a39f-0515ea2fa94b",
+   "metadata": {},
+   "source": [
+    "## Export the trigram model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92f42a44-ed03-4069-9202-30a54de98ba4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_model_to_json_file(trigram_model)"
+   ]
   }
  ],
  "metadata": {
